# AI-powered-phase4

./: .gitignore  DEPLOYMENT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE5-PROGRESS-SUMMARY.md  PHASE5-PROGRESS.md  README-local-deployment.md  README-phase5.md  README.md  STEP4-DEPLOYMENT-COMPLETION-REPORT.md  TODO-PHASE5.md  comprehensive_test.py  comprehensive_test_windows.py  constitution.md  docker-compose.yml  kafka-dapr-engineer.md  kafka-topics.yaml  phase4-spec.md  phase5-plan-oke.md  phase5-plan.md  phase5-spec-oke.md  phase5-spec.md  phase5-tasks.md  plan.md  pytest.ini  setup-minikube-dapr-kafka.sh  temp.html  test_auth.py
.github/: SECURITY.md
agents/: ADVANCED_FEATURES_COMPLETE.md  API_EXAMPLES.md  DELIVERABLES_SUMMARY.md  FILE_MANIFEST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PHASE5_SUMMARY.md  QUICK_REFERENCE.md  README_T5.2.1_T5.2.2.md  SEARCH_FILTER_SORT_DOCUMENTATION.md  T5.6.1-COMPLETE.md  api_endpoints.py  api_tasks_advanced.py  cloud-deploy-engineer.md  (+17 more)
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  README.md  api_priority_tags.py  api_search_filter_sort.py  dapr_jobs_integration.py  db.py  dependencies.py  event_publisher.py  integration_tests.py  main.py  migrate_phase5.py  migration_priority_tags.py  migration_search_filter_sort.py  models.py  pyproject.toml  reminder_worker.py  requirements.txt  schemas.py  task_event_publisher.py  test.txt
backend/events/: reminder_publisher.py  state_management.py  task_publisher.py
backend/routes/: __init__.py  auth.py  tasks.py
backend/services/: __init__.py  recurrence_service.py  reminder_service.py
backend/src/: main.py
backend/src/ai/: agent.py
backend/src/api/handlers/: errors.py
backend/src/api/middleware/: auth_middleware.py
backend/src/api/models/: responses.py
backend/src/api/routes/: auth.py  chat.py
backend/src/core/: config.py  database.py  logging.py  security.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: conversation_service.py  mcp_tools.py  task_service.py
backend/src/utils/: helpers.py
(+279 files in other folders)
